--- a/po/wesnoth-httt/la.po
+++ b/po/wesnoth-httt/la.po
@@ -12,14 +12,15 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Battle for Wesnoth - HTTT 1.2.0\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2012-10-27 16:01+0200\n"
-"PO-Revision-Date: 2012-04-06 02:05+0100\n"
+"POT-Creation-Date: 2012-11-17 13:12+0100\n"
+"PO-Revision-Date: 2013-01-01 18:04-0000\n"
 "Last-Translator: Thomas Hockings <elprofesh@gmail.com>\n"
 "Language-Team: Latin <http://wiki.wesnoth.org/LatinTranslation>\n"
 "Language: la\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: Poedit 1.5.4\n"
 
 #. [campaign]: id=Heir_To_The_Throne
 #: data/campaigns/Heir_To_The_Throne/_main.cfg:11
@@ -365,12 +366,6 @@ msgstr ""
 
 #. [message]: speaker=Delfador
 #: data/campaigns/Heir_To_The_Throne/scenarios/01_The_Elves_Besieged.cfg:281
-#, fuzzy
-#| msgid ""
-#| "We will go north. Perhaps we can reach the Isle of Alduin. If we can make "
-#| "it there, surely we will be safe. Konrad, we must recruit some elves to "
-#| "help us, and then you must make it to the sign post in the north-west. I "
-#| "will protect you!"
 msgid ""
 "We will go north. Perhaps we can reach the Isle of Alduin. If we can make it "
 "there, surely we will be safe. Konrad, we must recruit some elves to help "
@@ -6814,9 +6809,9 @@ msgid ""
 "will rule from it with justice and fairness. I may even accept you as my "
 "adviser and counselor, Delfador."
 msgstr ""
-"Ego sceptrum habeo! Reveniam et populus me ut Reginam accipet! Mater modo "
-"Regina brevis est. Solium, ex quo iuste recteque regnabo, legitime mihi est. "
-"Te fortasse ut suasorem et consillarium accipiam, Delfador."
+"Igitur, ego sceptrum habeo! Reveniam et populus me ut Reginam accipet! Mater "
+"modo Regina brevis est. Solium, ex quo iuste recteque regnabo, legitime mihi "
+"est. Te fortasse ut suasorem et consillarium accipiam, Delfador."
 
 #. [message]: speaker=Delfador
 #: data/campaigns/Heir_To_The_Throne/scenarios/21_Elven_Council.cfg:187
@@ -8426,307 +8421,3 @@ msgstr ""
 "Delfador fugiens ad Silva Aetenis, ultra finem Vesnotei, puerum Conradum "
 "praesidio Dryadalium educavit, triste intuens initium regnum terroris "
 "Ascuerae..."
-
-#, fuzzy
-#~ msgid ""
-#~ "A final blow destroys the lich, releasing a small shock wave of energy "
-#~ "outwards. The Death Knights silently fall to the ground, inanimate. A "
-#~ "giant cloud of dust bellows out as the remnants of the lich’s once-mortal "
-#~ "skin and centuries of grime and gristle are dislodged for the last time."
-#~ msgstr ""
-#~ "Percutio ultima Ossa Magi destrugit et unda energiae solvit ad extra. "
-#~ "Duces Ossium labuntur tacite in solum, inanimati. Nubes pulvis exflat ut "
-#~ "reliqua cutis olim mortalis Ossium Magi et sordes saecularia demum "
-#~ "solvuntur."
-
-#~ msgid "Herbert"
-#~ msgstr "Herbertus"
-
-#~ msgid "Turns run out"
-#~ msgstr "Tempus exit"
-
-#~ msgid ""
-#~ "<span color='white'>Alternative objective:</span>\n"
-#~ "<span color='green'>Defeat the enemy leader</span> <small>(special bonus)"
-#~ "</small>"
-#~ msgstr ""
-#~ "<span color='white'>Propositum aliud:</span>\n"
-#~ "<span color='green'>Ducem hostis vincere</span> <small>(fini prodest)</"
-#~ "small>"
-
-#~ msgid ""
-#~ "<span color='white'>Alternative objective:</span>\n"
-#~ "<span color='green'>Defeat all enemy leaders</span> <small>(early finish "
-#~ "bonus)</small>"
-#~ msgstr ""
-#~ "<span color='white'>Propositum aliud:</span>\n"
-#~ "<span color='green'>duces omnes hostium vincere</span> <small>(celeri "
-#~ "victoriae prodest)</small>"
-
-#~ msgid ""
-#~ "<span color='white'>Alternative objective:</span>\n"
-#~ "<span color='green'>Defeat Muff Malal</span> <small>(early finish bonus)</"
-#~ "small>"
-#~ msgstr ""
-#~ "<span color='white'>Propositum aliud:</span>\n"
-#~ "<span color='green'>Mufum Malalem vincere</span> <small>(celeri victoriae "
-#~ "prodest)</small> "
-
-#~ msgid ""
-#~ "<span color='white'>Alternative objective:</span>\n"
-#~ "<span color='green'>Defeat all enemy leaders</span> <small>(special bonus)"
-#~ "</small>"
-#~ msgstr ""
-#~ "<span color='white>Propositum aliud:</span>\n"
-#~ "<span color='green'>Omnes duces hostium vincere</span> <small>(fini "
-#~ "prodest)</small>"
-
-#~ msgid ""
-#~ "<span color='white'>Alternative objective:</span>\n"
-#~ "<span color='green'>Eradicate the liches</span> <small>(early finish "
-#~ "bonus)</small>"
-#~ msgstr ""
-#~ "<span color='white>Propositum aliud:</span>\n"
-#~ "<span color='green'>Mortis Faudatores exstirpare</span> <small>(celeri "
-#~ "victoriae prodest)</small>"
-
-#~ msgid ""
-#~ "<span color='white'>Bonus objective:</span>\n"
-#~ "<span color='green'>Defeat all Death Knights first</span>"
-#~ msgstr ""
-#~ "<span color='white'>Propositum utile:</span>\n"
-#~ "<span color='green'>Prius Duces Mortum vincere</span>"
-
-#~ msgid ""
-#~ "<span color='white'>Optional objective:</span>\n"
-#~ "<span color='green'>Rescue the sergeant</span>"
-#~ msgstr ""
-#~ "<span color='white'>Propositum arbitrarium:</span>\n"
-#~ "<span color='green'>Optio subvenire</span>"
-
-#~ msgid ""
-#~ "<span color='white'>Optional objective:</span>\n"
-#~ "<span color='green'>Help the Wose fend off the undead attack</span>"
-#~ msgstr ""
-#~ "<span color='white'>Propositum arbitrarium:</span>\n"
-#~ "<span color='green'>Vosem impetum inmortui repellere adiuvare</span>"
-
-#~ msgid "Turns expire"
-#~ msgstr "Vices exit"
-
-#~ msgid ""
-#~ "<span color='white'>Bonus objective:</span>\n"
-#~ "<span color='green'>Defeat all enemy leaders</span>"
-#~ msgstr ""
-#~ "<span color='white'>Propositum utile:</span>\n"
-#~ "<span color='green'>Omnes duces hostium vincere</span>"
-
-#~ msgid "Troll"
-#~ msgstr "Troglodyta"
-
-#~ msgid "Robert"
-#~ msgstr "Robertus"
-
-#~ msgid "The Queen is Dead"
-#~ msgstr "Regina Mortua est"
-
-#~ msgid ""
-#~ "Young and brash, Fighters fight with a sword, and are vulnerable to "
-#~ "attack from enemies. However they have the potential to become great "
-#~ "warriors one day."
-#~ msgstr ""
-#~ "Juvenes et audaces, Pugnatores gladio pugnant et vulnerabiles sunt "
-#~ "hostium oppugnationibus. Sed potentiam habent ut bellatores magni olim "
-#~ "fiant."
-
-#~ msgid "Princess"
-#~ msgstr "Filia Reginae"
-
-#, fuzzy
-#~ msgid ""
-#~ "<255,255,255>Bonus objective:\n"
-#~ "@Defeat all enemy leaders"
-#~ msgstr "Omnes duces hostium vincere"
-
-#~ msgid ""
-#~ "... AND PERSONAL COUNSELOR TO MY FRIEND AND KING, GARARD THE SECOND! "
-#~ "TODAY YOU MEET YOUR ATONEMENT!"
-#~ msgstr ""
-#~ "... ET CONSULARIUS PERSONALIS AMICI MEI ET REGIS, GERARDI SECUNDI! HODIE "
-#~ "EXPIATIONEM INVENIS!"
-
-#, fuzzy
-#~ msgid "Clan Member Defeated"
-#~ msgstr "Socios Gentis Victos"
-
-#~ msgid "Clan Members Defeated"
-#~ msgstr "Socios Gentis Victos"
-
-#~ msgid "And so it has begun!"
-#~ msgstr "Ita coepit!"
-
-#~ msgid "Jibb"
-#~ msgstr "Iibbus"
-
-#~ msgid "Monry"
-#~ msgstr "Monrius"
-
-#~ msgid "Gleran"
-#~ msgstr "Gleranus"
-
-#~ msgid "Rogerus"
-#~ msgstr "Rogerus"
-
-#~ msgid "Rurcyn"
-#~ msgstr "Rurcinus"
-
-#~ msgid "Blyr"
-#~ msgstr "Blirus"
-
-#~ msgid "Ligwyn"
-#~ msgstr "Ligvinus"
-
-#~ msgid "Owaryn"
-#~ msgstr "Ovarinus"
-
-#~ msgid "Heldra"
-#~ msgstr "Heldra"
-
-#~ msgid "Marcus"
-#~ msgstr "Marcus"
-
-#~ msgid "Haldar"
-#~ msgstr "Haldaris"
-
-#~ msgid "Goblin Knight"
-#~ msgstr "Eques Cobolinus"
-
-#~ msgid "Ceomyr"
-#~ msgstr "Ceomirus"
-
-#~ msgid "Gwellyn"
-#~ msgstr "Guellinus"
-
-#~ msgid "cold"
-#~ msgstr "frigidum"
-
-#~ msgid "Eonihar"
-#~ msgstr "Eonihar"
-
-#~ msgid ""
-#~ "At last, friends, we have almost reached the home of my people, the North "
-#~ "Elves."
-#~ msgstr ""
-#~ "Postremum, amici, ad patriam populi mei, Dryadalum Septentrionum, fere "
-#~ "pervenimus."
-
-#~ msgid "Elder Mage"
-#~ msgstr "Magus senex"
-
-#~ msgid ""
-#~ "Once great, Elder Magi have seen their power a little diminished from "
-#~ "wearying years of battle. Nevertheless they remain feared on the "
-#~ "battlefield on account of their powerful lightning bolts."
-#~ msgstr ""
-#~ "Olim magni, Magi Senes potestatem suam post annos fatigosos proelii "
-#~ "paulum minuere viderunt. Metuti tamem in acie ob fulgoribus potentibus "
-#~ "eorum manent."
-
-#~ msgid "staff"
-#~ msgstr "virga"
-
-#~ msgid "lightning"
-#~ msgstr "fulgor"
-
-#~ msgid "Defeat the enemy leader (Bonus)"
-#~ msgstr "Ducem hostis vincere (Bonum)"
-
-#~ msgid "Defeat all enemy leaders (Bonus)"
-#~ msgstr "Omnes duces hostium vincere (Bonum)"
-
-#~ msgid "Defeat Enemy Leaders (Bonus)"
-#~ msgstr "Duces Hostium Vincere (Bonum)"
-
-#~ msgid ""
-#~ "This ancient Scepter was forged by the Dwarves. A symbol of the kingship "
-#~ "of Wesnoth, the Scepter has the power to shoot fireballs at enemies of "
-#~ "the bearer!"
-#~ msgstr ""
-#~ "Hoc Sceptrum antiquum a Nanis excusum est. Signum regni "
-#~ "Occidiseptentrionis Sceptrum facultatem habet coniciendi globos ignis in "
-#~ "hostes eius qui id gerit!"
-
-#~ msgid "Youth"
-#~ msgstr "Adulescens"
-
-#~ msgid ""
-#~ "Today almost a boy, by his devotion to the crown he is seeking to become "
-#~ "a Lord -- to join the elite of human fighters."
-#~ msgstr ""
-#~ "Hodie quasi puer est, sed per devotionem regni adpetit Dominum esse -- se "
-#~ "ad florem pugnatorum humanorum adiungere."
-
-#~ msgid "training sword"
-#~ msgstr "gladius scholae"
-
-#~ msgid "Elvish High Lord"
-#~ msgstr "Dominus Maximus Dryadalis"
-
-#~ msgid ""
-#~ "The leaders of the elves do not fall sallow and frail with age. Rather, "
-#~ "it is then that they grow to their true potential. Quiet and "
-#~ "contemplative in times of peace, a High Lord in the full of his wrath is "
-#~ "an awesome sight indeed."
-#~ msgstr ""
-#~ "Duces dryadalum non fiunt pallidi et fragiles ex aetate. Potius tunc "
-#~ "crescunt ad vim verum. Quieti et meditantes in temporibus pacis, Dominus "
-#~ "Maximus in plena ira sua est quidem spectaculum formidolosum."
-
-#~ msgid "faerie fire"
-#~ msgstr "ignis orealis"
-
-#~ msgid "female^Elvish Lady"
-#~ msgstr "Domina Dryadalis"
-
-#~ msgid ""
-#~ "Elves choose their leaders for their power and wisdom; foresight is what "
-#~ "has protected them in times of uncertainty. Their just reign is rewarded "
-#~ "by the unflagging fealty of their people, which is the greatest gift any "
-#~ "ruler could ask for."
-#~ msgstr ""
-#~ "Dryadales duces eligunt ob potentiam et sapientiam; providentia eos "
-#~ "protegit in temporibus incertis. Regnum iustum eorum oboedientia "
-#~ "constanti populi eorum compensatur, quae donum est maximum ducis."
-
-#~ msgid "Elvish Lord"
-#~ msgstr "Dominus Dryadalis"
-
-#~ msgid ""
-#~ "The nobility of the elves are possessed of merit to match their standing "
-#~ "in society. Elvish Lords are the wisest and strongest of their people, "
-#~ "and are fearsome in their command of magic."
-#~ msgstr ""
-#~ "Nobiles dryadalum virtum possidunt par statuti eorum in societate. Domini "
-#~ "Dryadales sapientissimi et fortissimi sunt populi sui, formidolosi in "
-#~ "imperio magicae."
-
-#~ msgid "Ambushed!"
-#~ msgstr "Insidiatus!"
-
-#~ msgid "RUMBLE! RUMBLE! RUMBLE!"
-#~ msgstr "MUGITUS! MUGITUS! MUGITUS!"
-
-#~ msgid "blade"
-#~ msgstr "lamina"
-
-#~ msgid "fire"
-#~ msgstr "ignis"
-
-#~ msgid "pierce"
-#~ msgstr "transfigere"
-
-#~ msgid "impact"
-#~ msgstr "incussus"
-
-#~ msgid "arcane"
-#~ msgstr "arcanum"
