--- a/po/wesnoth-low/la.po
+++ b/po/wesnoth-low/la.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: wescamp-i 18n\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2012-08-12 10:25+0200\n"
+"POT-Creation-Date: 2012-11-17 13:12+0100\n"
 "PO-Revision-Date: 2012-04-06 02:03+0100\n"
 "Last-Translator: Thomas Hockings <elprofesh@gmail.com>\n"
 "Language-Team: Latin <http://wiki.wesnoth.org/LatinTranslation>\n"
@@ -5413,7 +5413,7 @@ msgid ""
 msgstr ""
 "delectat Calentem:\n"
 "Per copulam unicam inter Calentem Cleodilamque, eum delectat ut ille melius "
-"pugnat.\n"
+"pugnet.\n"
 "Calens prope Cleodilam magis damni quarto in pugna dabit."
 
 #. [heals]: id=heals_kalenz
@@ -5435,7 +5435,7 @@ msgid ""
 "healing at the beginning of your turn."
 msgstr ""
 "sanat +IV:\n"
-"Si hamadryas copulam unicam viri facit illi facultatem sanandi auget. Hoc "
+"Si hamadryas copulam unicam alicui facit illi facultatem sanandi auget. Hoc "
 "Cleodilam sinit ut vice incepto magis punctorum sanandi det."
 
 #. [message]: speaker=unit
@@ -5528,182 +5528,3 @@ msgstr "Heu! Seri sumus..."
 #: data/campaigns/Legend_of_Wesmere/utils/low-macros.cfg:43
 msgid "You retrieve $amount_gold pieces of gold."
 msgstr "$amount_gold aureorum recipis."
-
-#~ msgid "This is a stub!"
-#~ msgstr "Hic est floccus!"
-
-#~ msgid "Elvish Horse Archer"
-#~ msgstr "Sagittarius Dryadalium"
-
-#~ msgid "sword"
-#~ msgstr "gladius"
-
-#~ msgid "bow"
-#~ msgstr "arcus"
-
-#~ msgid "2p MC — LoW, Hard Mode, Chapter five"
-#~ msgstr "IIl MPL — HFV, Modus Difficilis, Liber V"
-
-#~ msgid ""
-#~ "<i>The Legend of Wesmere</i>\n"
-#~ "Multiplayer Campaign\n"
-#~ "Chapter five\n"
-#~ " Hard difficulty"
-#~ msgstr ""
-#~ "<i>Heroica Fabella Vesmerei</i>\n"
-#~ "Militia Pluribus Lusoribus\n"
-#~ "Liber V\n"
-#~ " Difficilis"
-
-#~ msgid "2p MC — LoW, Easy Mode, Chapter five"
-#~ msgstr "IIl MPL — HFV, Modus Facilis, Liber V"
-
-#~ msgid ""
-#~ "<i>The Legend of Wesmere</i>\n"
-#~ "Multiplayer Campaign\n"
-#~ "Chapter five\n"
-#~ " Easy difficulty"
-#~ msgstr ""
-#~ "<i>Heroica Fabella Vesmerei</i>\n"
-#~ "Militia Pluribus Lusoribus\n"
-#~ "Liber V\n"
-#~ " Facilis"
-
-#~ msgid "2p MC — LoW, Easy Mode, Chapter one"
-#~ msgstr "IIl MPL — HFV, Modus Facilis, Liber I "
-
-#~ msgid "2p MC — LoW, Normal Mode, Chapter one"
-#~ msgstr "IIl MPL — HFV, Modus Mediocris, Liber I"
-
-#~ msgid ""
-#~ "<i>The Legend of Wesmere</i>\n"
-#~ "Multiplayer Campaign\n"
-#~ "Chapter one\n"
-#~ " Normal difficulty"
-#~ msgstr ""
-#~ "<i>Heroica Fabella Vesmerei</i>\n"
-#~ "Militia Pluribus Lusoribus\n"
-#~ "Liber I\n"
-#~ " Mediocris"
-
-#~ msgid "2p MC — LoW, Hard Mode, Chapter one"
-#~ msgstr "IIl MPL — HFV, Modus Difficilis, Liver I"
-
-#~ msgid ""
-#~ "<i>The Legend of Wesmere</i>\n"
-#~ "Multiplayer Campaign\n"
-#~ "Chapter one\n"
-#~ " Hard difficulty"
-#~ msgstr ""
-#~ "<i>Heroica Fabella Vesmerei</i>\n"
-#~ "Militia Pluribus Lusoribus\n"
-#~ "Liber I\n"
-#~ " Difficilis"
-
-#~ msgid ""
-#~ "Spare as many dwarves as you can and don't kill their leader. We can't "
-#~ "risk to get the dwarves as an additional enemy."
-#~ msgstr ""
-#~ "Parcete omnibis nanis quibus potis est ac noli occidere ducem. Nanos "
-#~ "hostem alium ferre non possumus. "
-
-#~ msgid "3p MC — LoW, Easy Mode, Chapter two"
-#~ msgstr "IIIl MPL — HFV, Modus Facilis, Liber II"
-
-#~ msgid ""
-#~ "<i>The Legend of Wesmere</i>\n"
-#~ "Multiplayer Campaign\n"
-#~ "Chapter two\n"
-#~ " Easy difficulty"
-#~ msgstr ""
-#~ "<i>Heroica Fabella Vesmerei</i>\n"
-#~ "Militia Pluribus Lusoribus\n"
-#~ "Liber II\n"
-#~ " Facilis"
-
-#~ msgid "3p MC — LoW, Normal Mode, Chapter two"
-#~ msgstr "IIIl — HFV, Modus Mediocris, Liber II"
-
-#~ msgid ""
-#~ "<i>The Legend of Wesmere</i>\n"
-#~ "Multiplayer Campaign\n"
-#~ "Chapter two\n"
-#~ " Normal difficulty"
-#~ msgstr ""
-#~ "<i>Heroica Fabella Vesmerei</i>\n"
-#~ "Militia Pluribus Lusoribus\n"
-#~ "Liber II\n"
-#~ " Mediocris"
-
-#~ msgid "El'Isomithir"
-#~ msgstr "Elisomither"
-
-#~ msgid "4p MC — LoW, Hard Mode, Chapter three"
-#~ msgstr "IVl MPL — HFV, Modus Difficilis, Liber III"
-
-#~ msgid ""
-#~ "<i>The Legend of Wesmere</i>\n"
-#~ "Multiplayer Campaign\n"
-#~ "Chapter three\n"
-#~ " Hard difficulty"
-#~ msgstr ""
-#~ "<i>Heroica Fabella Vesmerei</i>\n"
-#~ "Militia Pluribus Lusoribus\n"
-#~ "Liber III\n"
-#~ " Difficilis"
-
-#~ msgid "4p MC — LoW, Easy Mode, Chapter three"
-#~ msgstr "IVl MPL — HFV, Modus Facilis, Liber III"
-
-#~ msgid ""
-#~ "<i>The Legend of Wesmere</i>\n"
-#~ "Multiplayer Campaign\n"
-#~ "Chapter three\n"
-#~ " Easy difficulty"
-#~ msgstr ""
-#~ "<i>Heroica Fabella Vesmerei</i>\n"
-#~ "Militia Pluribus Lusoribus\n"
-#~ "Liber III\n"
-#~ " Facilis"
-
-#~ msgid "From now on the elves will be able to recruit shamans."
-#~ msgstr "Hinc dryadales haruspicas adlegere possunt. "
-
-#~ msgid "Death of El'Isomithir"
-#~ msgstr "Mors Elisomithiris"
-
-#~ msgid "Death of El'Isimithir"
-#~ msgstr "Mors Elisimithiris"
-
-#~ msgid "South Tower"
-#~ msgstr "Turris Australis"
-
-#~ msgid "Turns run out"
-#~ msgstr "Tempus exit"
-
-#~ msgid "Defeat all enemies"
-#~ msgstr "Omnes hostes vincere"
-
-#~ msgid "Defeat every enemy unit"
-#~ msgstr "Omnem actorem hostium vincere"
-
-#~ msgid " New Objective: Defeat all enemies"
-#~ msgstr "Finis Novus: Omnes hostes vincere"
-
-#~ msgid "Delfador"
-#~ msgstr "Delfador"
-
-#~ msgid "cold"
-#~ msgstr "frigidum"
-
-#~ msgid "magical"
-#~ msgstr "magicalis"
-
-#~ msgid "ambush"
-#~ msgstr "insidiae"
-
-#~ msgid "leadership"
-#~ msgstr "ductus"
-
-#~ msgid "Elvish Scout"
-#~ msgstr "Explorator Dryadalis"
