--- a/po/wesnoth-manual/la.po
+++ b/po/wesnoth-manual/la.po
@@ -11,14 +11,15 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.3.7+svn\n"
-"POT-Creation-Date: 2012-02-25 15:50+0100\n"
-"PO-Revision-Date: 2012-01-09 23:02+0100\n"
+"POT-Creation-Date: 2012-11-17 13:12+0100\n"
+"PO-Revision-Date: 2012-12-16 20:35-0000\n"
 "Last-Translator: Thomas Hockings <elprofesh@gmail.com>\n"
 "Language-Team: Latin <http://wiki.wesnoth.org/LatinTranslation>\n"
 "Language: la\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: Poedit 1.5.4\n"
 
 #. type: Attribute 'lang' of: <book>
 #: /src/wesnoth-1.10/doc/manual/manual.en.xml:6
@@ -483,9 +484,8 @@ msgstr ""
 
 #. type: Content of: <book><chapter><section><section><simpara><inlinemediaobject><textobject><phrase>
 #: /src/wesnoth-1.10/doc/manual/manual.en.xml:317
-#, fuzzy
 msgid "Multiplayer dialog"
-msgstr "Plures Lusores"
+msgstr "Colloquium Pluribus Lusoribus"
 
 #. type: Content of: <book><chapter><section><section><section><title>
 #: /src/wesnoth-1.10/doc/manual/manual.en.xml:320
@@ -643,12 +643,12 @@ msgstr ""
 #. type: Content of: <book><chapter><section><section><orderedlist><listitem><simpara>
 #: /src/wesnoth-1.10/doc/manual/manual.en.xml:399
 msgid "Menu button"
-msgstr ""
+msgstr "Globulus mensae"
 
 #. type: Content of: <book><chapter><section><section><orderedlist><listitem><simpara>
 #: /src/wesnoth-1.10/doc/manual/manual.en.xml:404
 msgid "Actions button"
-msgstr ""
+msgstr "Globulus actionum"
 
 #. type: Content of: <book><chapter><section><section><orderedlist><listitem><simpara>
 #: /src/wesnoth-1.10/doc/manual/manual.en.xml:409
@@ -698,7 +698,7 @@ msgstr ""
 #. type: Content of: <book><chapter><section><section><orderedlist><listitem><simpara>
 #: /src/wesnoth-1.10/doc/manual/manual.en.xml:454
 msgid "Current hex type"
-msgstr ""
+msgstr "Genus hexagoni praesens"
 
 #. type: Content of: <book><chapter><section><section><simpara><inlinemediaobject>
 #: /src/wesnoth-1.10/doc/manual/manual.en.xml:459
@@ -915,22 +915,22 @@ msgstr ""
 #: /src/wesnoth-1.10/doc/manual/manual.en.xml:595
 #: /src/wesnoth-1.10/doc/manual/manual.en.xml:1250
 msgid "Scroll"
-msgstr ""
+msgstr "Vagatio"
 
 #. type: Content of: <book><chapter><section><table><tgroup><tbody><row><entry>
 #: /src/wesnoth-1.10/doc/manual/manual.en.xml:600
 msgid "Left click"
-msgstr ""
+msgstr "Tactus laevus"
 
 #. type: Content of: <book><chapter><section><table><tgroup><tbody><row><entry>
 #: /src/wesnoth-1.10/doc/manual/manual.en.xml:603
 msgid "Select unit, move unit"
-msgstr ""
+msgstr "Actorem eligere, actorem movere"
 
 #. type: Content of: <book><chapter><section><table><tgroup><tbody><row><entry>
 #: /src/wesnoth-1.10/doc/manual/manual.en.xml:608
 msgid "Right click"
-msgstr ""
+msgstr "Tactus dexter"
 
 #. type: Content of: <book><chapter><section><table><tgroup><tbody><row><entry>
 #: /src/wesnoth-1.10/doc/manual/manual.en.xml:611
@@ -940,7 +940,7 @@ msgstr ""
 #. type: Content of: <book><chapter><section><table><tgroup><tbody><row><entry>
 #: /src/wesnoth-1.10/doc/manual/manual.en.xml:616
 msgid "Middle click"
-msgstr ""
+msgstr "Tactus medius"
 
 #. type: Content of: <book><chapter><section><table><tgroup><tbody><row><entry>
 #: /src/wesnoth-1.10/doc/manual/manual.en.xml:619
@@ -1027,7 +1027,7 @@ msgstr "+"
 #. type: Content of: <book><chapter><section><table><tgroup><tbody><row><entry>
 #: /src/wesnoth-1.10/doc/manual/manual.en.xml:695
 msgid "Zoom in"
-msgstr ""
+msgstr "Amplificare"
 
 #. type: Content of: <book><chapter><section><section><table><tgroup><tbody><row><entry>
 #: /src/wesnoth-1.10/doc/manual/manual.en.xml:700
@@ -1038,7 +1038,7 @@ msgstr "-"
 #. type: Content of: <book><chapter><section><table><tgroup><tbody><row><entry>
 #: /src/wesnoth-1.10/doc/manual/manual.en.xml:703
 msgid "Zoom out"
-msgstr ""
+msgstr "Minuere"
 
 #. type: Content of: <book><chapter><section><section><table><tgroup><tbody><row><entry>
 #: /src/wesnoth-1.10/doc/manual/manual.en.xml:708
@@ -1070,7 +1070,7 @@ msgstr "Ctrl+g"
 #. type: Content of: <book><chapter><section><table><tgroup><tbody><row><entry>
 #: /src/wesnoth-1.10/doc/manual/manual.en.xml:727
 msgid "Toggle grid"
-msgstr ""
+msgstr "Cancellos variare"
 
 #. type: Content of: <book><chapter><section><table><tgroup><tbody><row><entry>
 #: /src/wesnoth-1.10/doc/manual/manual.en.xml:738
@@ -1121,7 +1121,7 @@ msgstr "Alt+s"
 #. type: Content of: <book><chapter><section><table><tgroup><tbody><row><entry>
 #: /src/wesnoth-1.10/doc/manual/manual.en.xml:779
 msgid "Show status table"
-msgstr ""
+msgstr "Mensam status edere"
 
 #. type: Content of: <book><chapter><section><table><tgroup><tbody><row><entry>
 #: /src/wesnoth-1.10/doc/manual/manual.en.xml:784
@@ -1131,7 +1131,7 @@ msgstr "Alt+u"
 #. type: Content of: <book><chapter><section><table><tgroup><tbody><row><entry>
 #: /src/wesnoth-1.10/doc/manual/manual.en.xml:787
 msgid "Show unit list"
-msgstr ""
+msgstr "Tabulam actorum edere"
 
 #. type: Content of: <book><chapter><section><table><tgroup><tbody><row><entry>
 #: /src/wesnoth-1.10/doc/manual/manual.en.xml:798
@@ -1151,7 +1151,7 @@ msgstr "Shift+s"
 #. type: Content of: <book><chapter><section><table><tgroup><tbody><row><entry>
 #: /src/wesnoth-1.10/doc/manual/manual.en.xml:815
 msgid "Update shroud now"
-msgstr ""
+msgstr "Iam absconsum novare"
 
 #. type: Content of: <book><chapter><section><table><title>
 #: /src/wesnoth-1.10/doc/manual/manual.en.xml:825
@@ -1336,7 +1336,7 @@ msgstr "p"
 #. type: Content of: <book><chapter><section><table><tgroup><tbody><row><entry>
 #: /src/wesnoth-1.10/doc/manual/manual.en.xml:999
 msgid "Toggle planning mode"
-msgstr ""
+msgstr "Modum parandi variare"
 
 #. type: Content of: <book><chapter><section><table><tgroup><tbody><row><entry>
 #: /src/wesnoth-1.10/doc/manual/manual.en.xml:1004
@@ -1396,7 +1396,7 @@ msgstr "i"
 #. type: Content of: <book><chapter><section><table><tgroup><tbody><row><entry>
 #: /src/wesnoth-1.10/doc/manual/manual.en.xml:1047
 msgid "Suppose dead"
-msgstr ""
+msgstr "Mortuum putare"
 
 #. type: Content of: <book><chapter><section><table><title>
 #: /src/wesnoth-1.10/doc/manual/manual.en.xml:1057
@@ -1510,6 +1510,8 @@ msgstr ":"
 msgid ""
 "<ulink url=\"http://www.wesnoth.org/wiki/CommandMode\">Command mode</ulink>"
 msgstr ""
+"<ulink url=\"http://www.wesnoth.org/wiki/CommandMode\">Modus imperandi</"
+"ulink>"
 
 #. type: Content of: <book><chapter><section><table><tgroup><tbody><row><entry>
 #: /src/wesnoth-1.10/doc/manual/manual.en.xml:1162
@@ -1530,7 +1532,7 @@ msgstr "Shift+c"
 #. type: Content of: <book><chapter><section><table><tgroup><tbody><row><entry>
 #: /src/wesnoth-1.10/doc/manual/manual.en.xml:1173
 msgid "Create Unit (Debug!)"
-msgstr ""
+msgstr "Actorem Creare (Cimicare!)"
 
 #. type: Content of: <book><chapter><section><table><tgroup><tbody><row><entry>
 #: /src/wesnoth-1.10/doc/manual/manual.en.xml:1178
@@ -1655,9 +1657,8 @@ msgstr ""
 
 #. type: Content of: <book><chapter><section><section><simpara><inlinemediaobject><textobject><phrase>
 #: /src/wesnoth-1.10/doc/manual/manual.en.xml:1320
-#, fuzzy
 msgid "Recruit dialog"
-msgstr "Conscriptio et Reevocatio"
+msgstr "Colloquium Conscribendi"
 
 #. type: Content of: <book><chapter><section><section><simpara>
 #: /src/wesnoth-1.10/doc/manual/manual.en.xml:1322
@@ -2248,7 +2249,7 @@ msgstr ""
 #. type: Content of: <book><chapter><section><section><title>
 #: /src/wesnoth-1.10/doc/manual/manual.en.xml:1772
 msgid "Unit Specialties"
-msgstr ""
+msgstr "Facultates Actorum"
 
 #. type: Content of: <book><chapter><section><section><simpara>
 #: /src/wesnoth-1.10/doc/manual/manual.en.xml:1773
@@ -2665,7 +2666,7 @@ msgstr "IIL"
 #. type: Content of: <book><chapter><section><section><title>
 #: /src/wesnoth-1.10/doc/manual/manual.en.xml:2203
 msgid "Recalling units"
-msgstr "Actores revocare"
+msgstr "Actores evocare"
 
 #. type: Content of: <book><chapter><section><section><simpara>
 #: /src/wesnoth-1.10/doc/manual/manual.en.xml:2204
@@ -3615,7 +3616,7 @@ msgstr ""
 #. type: Content of: <book><chapter><section><section><itemizedlist><listitem><simpara>
 #: /src/wesnoth-1.10/doc/manual/manual.en.xml:2834
 msgid "Time of day really matters:"
-msgstr ""
+msgstr "Hora multo interest:"
 
 #. type: Content of: <book><chapter><section><section><itemizedlist><listitem><itemizedlist><listitem><simpara>
 #: /src/wesnoth-1.10/doc/manual/manual.en.xml:2839
